--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment -5</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Assignment-5</title>
+
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <script src="script.js"></script> 
+    
+    
+    <button onclick="addRow()">Add Row</button>
+
+    <table id="main">
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <script src="script.js"></script>
+
 </body>
 </html>
