--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     
     <button onclick="addRow()">Add Row</button>
+    <button onclick="addColumn()">Add Column</button>
 
     <table id="main">
         <tr>
