--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <button onclick="addRow()">Add Row</button>
     <button onclick="addColumn()">Add Column</button>
+    <button onclick="removeRow()">Remove row</button>
 
     <table id="main">
         <tr>
