--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button onclick="addRow()">Add Row</button>
     <button onclick="addColumn()">Add Column</button>
     <button onclick="removeRow()">Remove row</button>
+    <button onclick="removeColumn()">Remove column</button>
+
 
     <table id="main">
         <tr>
