fixed #14 click on a single cell, changing its color to the currently selected color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <form>
         <p>
             <label>Color List</label>
-            <select id="color" change="setColor(this.value)"> <!-- 6 -->
+            <select id="color" change="setColor(this.value)"> 
                 <option value="#87bac9">blue</option>
                 <option value="#db5881">pink</option>
                 <option value="#d4e094">green</option>
