fixed #16 fill all uncolored cells with the currently selected color

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </select>
         </p>
     </form>
+    <button onclick="fillUncolored()">Fill all uncolor cells.</button>
 
     <table id="main">
         <tr>
