--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
     </form>
     <button onclick="fillUncolored()">Fill all uncolor cells.</button>
-
+    <button onclick="fillAllCurrent()">Fill All cells</button>
     <table id="main">
         <tr>
             <td></td>
