--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </form>
     <button onclick="fillUncolored()">Fill all uncolor cells.</button>
     <button onclick="fillAllCurrent()">Fill All cells</button>
+    <button onclick="clearAllCells()">Clear All cells</button>
     <table id="main">
         <tr>
             <td></td>
