modified html and js files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
         <p>
             <label>Select colors from here :</label>
-            <select id="color" onnchange="setColor(this.value)"> 
+            <select id="color" onchange="setColor(this.value)"> 
                 <option value="#87bac9">blue</option>
                 <option value="#db5881">pink</option>
                 <option value="#d4e094">green</option>
@@ -28,9 +28,9 @@
             </select>
         </p>
     
-    <button id="fillUncolored()">Fill all uncolor cells.</button>
-    <button id="fillAllCurrent()">Fill All cells</button>
-    <button id="clearAllCells()">Clear All cells</button>
+    <button id="fillUncolored">Fill all uncolor cells.</button>
+    <button id="fillAllCurrent">Fill All cells</button>
+    <button id="clearAllCells">Clear All cells</button>
     <script src="script.js"></script>
 
 </body>
